--- a/laboratory/package.json
+++ b/laboratory/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.53.0",
-    "axios": "^1.7.7",
+    "axios": "^1.13.2",
+    "html2pdf.js": "^0.12.1",
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "react-signature-canvas": "^1.0.6",
+    "react-to-print": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
