--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.11.3",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
